# cgx

./: .gitignore  .pre-commit-config.yaml  .rust-analyzer.toml  BUILDING.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  SECURITY.md  build.rs  cgx-example.toml  cliff.toml  clippy.toml  deny.toml  dist-workspace.toml  release-plz.toml  rust-toolchain.toml  rustfmt-nightly.toml  rustfmt.toml  taplo.toml
.github/: dependabot.yml  dist-build-setup.yml  mergify.yml
.github/scripts/: check-dist-release-generated.sh  dist-release-lib.sh  regen-dist-release.sh
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release-plz.yml  release.yml
build-images/: README.md
build-images/linux-musl/: Dockerfile  publish.sh
cargo-cgx/: Cargo.toml  README.md  dist.toml
cargo-cgx/src/: main.rs
cargo-cgx/tests/: integration.rs
cgx/: Cargo.toml
cgx-core/: Cargo.toml
cgx-core/src/: builder.rs  cache.rs  cargo.rs  cli.rs  config.rs  crate_resolver.rs  cratespec.rs  downloader.rs  error.rs  git.rs  helpers.rs  http.rs  lib.rs  logging.rs  registry.rs  resolver.rs  runner.rs  sbom.rs
cgx-core/src/bin_resolver/: mod.rs
cgx-core/src/bin_resolver/providers/: archive.rs  binstall.rs  github.rs  gitlab.rs  mod.rs  quickinstall.rs
cgx-core/src/messages/: bin_resolution.rs  binary.rs  build.rs  build_cache.rs  crate_resolution.rs  git.rs  mod.rs  prebuilt_binary.rs  resolution.rs  runner.rs  source.rs
cgx-core/src/snapshots/: cgx_core__sbom__tests__snapshots__snapshot_simple_bin_no_deps.snap  cgx_core__sbom__tests__snapshots__snapshot_simple_lib_no_deps.snap  cgx_core__sbom__tests__snapshots__snapshot_stale_serde.snap  cgx_core__sbom__tests__snapshots__snapshot_thicc.snap  cgx_core__sbom__tests__snapshots__snapshot_timestamp_all_features.snap  cgx_core__sbom__tests__snapshots__snapshot_timestamp_default_features.snap  cgx_core__sbom__tests__snapshots__snapshot_timestamp_frobnulator_only.snap  cgx_core__sbom__tests__snapshots__snapshot_timestamp_no_default_features.snap
cgx-core/testdata/configs/: cgx.toml
cgx-core/testdata/configs/work/: cgx.toml
cgx-core/testdata/configs/work/project1/: cgx.toml  not_called_cgx.toml
cgx-core/testdata/crates/proc-macro-dep/src/: main.rs
cgx-core/testdata/crates/workspace-multiple-bin-crates/bin1/: Cargo.toml
cgx/src/: lib.rs  logging.rs  main.rs
cgx/tests/integration/: config.rs  defaults.rs  git_sources.rs  main.rs  prebuilt_binaries.rs  utils.rs
src/: build.rs  builder.rs  cache.rs  cargo.rs  cli.rs  config.rs  crateref.rs  cratespec.rs  downloader.rs  error.rs  git.rs  helpers.rs  lib.rs  logging.rs  main.rs  resolver.rs  runner.rs  sbom.rs  testdata.rs
src/snapshots/: cgx__sbom__tests__snapshots__snapshot_simple_bin_no_deps.snap  cgx__sbom__tests__snapshots__snapshot_simple_lib_no_deps.snap  cgx__sbom__tests__snapshots__snapshot_stale_serde.snap  cgx__sbom__tests__snapshots__snapshot_thicc.snap  cgx__sbom__tests__snapshots__snapshot_timestamp_all_features.snap  cgx__sbom__tests__snapshots__snapshot_timestamp_default_features.snap  cgx__sbom__tests__snapshots__snapshot_timestamp_frobnulator_only.snap  cgx__sbom__tests__snapshots__snapshot_timestamp_no_default_features.snap
testdata/configs/: invalid_config_options.toml  invalid_toml.toml
testdata/configs/work/project2/: cgx.toml
testdata/crates/: README.md
testdata/crates/os-specific-deps/src/: main.rs
testdata/crates/timestamp/: Cargo.toml
testdata/crates/workspace-multiple-bin-crates/lib3/: Cargo.toml
testdata/os-specific-deps/: Cargo.toml
testdata/os-specific-deps/src/: main.rs
testdata/proc-macro-dep/: Cargo.toml
testdata/simple-bin-no-deps/: Cargo.toml
testdata/simple-lib-no-deps/: Cargo.toml
testdata/single-crate-multiple-bins/: Cargo.toml
testdata/single-crate-multiple-bins-with-default/: Cargo.toml
testdata/stale-serde/: Cargo.toml
testdata/thicc/: Cargo.toml
testdata/timestamp/: build.rs
testdata/timestamp/src/: main.rs
testdata/workspace-all-libs/lib1/: Cargo.toml
testdata/workspace-all-libs/lib1/src/: lib.rs
testdata/workspace-all-libs/lib2/: Cargo.toml
testdata/workspace-multiple-bin-crates/: Cargo.toml
testdata/workspace-multiple-bin-crates/bin2/: Cargo.toml
testdata/workspace-multiple-bin-crates/bin3/: Cargo.toml
tests/integration/: basic.rs  defaults.rs  main.rs  utils.rs
