[package]
authors      = ["Adam Nelson <anelson@apocryph.org>"]
categories   = ["command-line-utilities", "development-tools"]
description  = "Rust version of uvx or npx, for use with Rust crates"
edition      = "2024"
homepage     = "https://github.com/anelson-labs/cgx"
license      = "MIT OR Apache-2.0"
name         = "cgx"
readme       = "README.md"
repository   = "https://github.com/anelson-labs/cgx"
rust-version = "1.85.1"
version      = "0.0.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"

[badges]
maintenance = { status = "experimental" }

[dependencies]
build-context   = "0.1.3"
cargo_metadata  = "0.20.0"
chrono          = { version = "0.4.42", features = ["serde"] }
clap            = { version = "4.5.48", features = ["derive", "env", "string", "unicode"] }
directories     = "6.0.0"
etcetera        = "0.10.0"
flate2          = "1.1.4"
gix             = { version = "0.73", features = ["blocking-http-transport-reqwest", "max-performance-safe", "worktree-mutation"] }
home            = "0.5.11"
ignore          = "0.4.23"
indicatif       = "0.18.0"
reqwest         = { version = "0.12.23", features = ["blocking"] }
semver          = { version = "1.0.27", features = ["serde"] }
serde           = { version = "1.0.228", features = ["derive"] }
serde-cyclonedx = "0.10.0"
serde_json      = "1.0.145"
sha2            = "0.10.9"
snafu           = "0.8.9"
tame-index      = { version = "0.23.0", features = ["sparse"] }
tar             = "0.4.44"
tempfile        = "3.23.0"
tokio           = { version = "1", features = ["rt", "rt-multi-thread"] }
url             = { version = "2.5.7", features = ["serde"] }
uuid            = { version = "1.18.1", features = ["v4"] }
which           = "8.0.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto      = "thin"

[dev-dependencies]
assert-json-diff = "2.0.2"
assert_matches   = "1.5.0"
insta            = "1.43.2"
