[package]
authors      = ["Adam Nelson <anelson@apocryph.org>"]
categories   = ["command-line-utilities", "development-tools"]
description  = "Rust version of uvx or npx, for use with Rust crates"
edition      = "2024"
homepage     = "https://github.com/anelson-labs/cgx"
license      = "MIT OR Apache-2.0"
name         = "cgx"
readme       = "README.md"
repository   = "https://github.com/anelson-labs/cgx"
rust-version = "1.85.1"
version      = "0.0.3"

[badges]
maintenance = { status = "experimental" }

[dependencies]
build-context      = "0.1.3"
cargo_metadata     = "0.20.0"
chrono             = { version = "0.4.42", features = ["serde"] }
clap               = { version = "4.5.48", features = ["derive", "env", "string", "unicode"] }
directories        = "6.0.0"
etcetera           = "0.10.0"
flate2             = "1.1.4"
gix                = { version = "0.73", features = ["blocking-http-transport-reqwest", "max-performance-safe", "worktree-mutation"] }
home               = "0.5.11"
ignore             = "0.4.23"
indicatif          = "0.18.0"
reqwest            = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls", "http2", "charset", "gzip", "system-proxy"] }
semver             = { version = "1.0.27", features = ["serde"] }
serde              = { version = "1.0.228", features = ["derive"] }
serde-cyclonedx    = "0.10.0"
serde_json         = "1.0.145"
sha2               = "0.10.9"
snafu              = "0.8.9"
tame-index         = { version = "0.23.1", features = ["sparse"] }
tar                = "0.4.44"
tempfile           = "3.23.0"
tokio              = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing            = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url                = { version = "2.5.7", features = ["serde"] }
uuid               = { version = "1.18.1", features = ["v4"] }
which              = "8.0.0"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto      = "thin"

[build-dependencies]
vergen-gix = { version = "1.0.9", default-features = false }

[dev-dependencies]
assert-json-diff = "2.0.2"
assert_matches   = "1.5.0"
insta            = "1.43.2"
rand             = "0.9.2"

#
# Enable some optional lints that are not on by default but we want to enforce
#
# This is inspired by the Embark Studios list at <https://github.com/EmbarkStudios/rust-ecosystem/blob/main/lints.toml>
#

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style   = { level = "warn", priority = -1 }
rust_2018_idioms    = { level = "warn", priority = -1 }
unexpected_cfgs     = "warn"
unsafe_code         = "forbid"

[lints.clippy]
await_holding_lock                 = "warn"
char_lit_as_u8                     = "warn"
checked_conversions                = "warn"
dbg_macro                          = "warn"
debug_assert_with_mut_call         = "warn"
doc_markdown                       = "warn"
empty_enum                         = "warn"
enum_glob_use                      = "deny"
exit                               = "warn"
expl_impl_clone_on_copy            = "warn"
explicit_deref_methods             = "warn"
explicit_into_iter_loop            = "warn"
fallible_impl_from                 = "warn"
filter_map_next                    = "warn"
flat_map_option                    = "warn"
float_cmp_const                    = "warn"
fn_params_excessive_bools          = "warn"
from_iter_instead_of_collect       = "warn"
if_let_mutex                       = "warn"
implicit_clone                     = "warn"
imprecise_flops                    = "warn"
inefficient_to_string              = "warn"
invalid_upcast_comparisons         = "warn"
large_digit_groups                 = "warn"
large_stack_arrays                 = "warn"
large_types_passed_by_value        = "warn"
let_unit_value                     = "warn"
linkedlist                         = "warn"
lossy_float_literal                = "warn"
macro_use_imports                  = "warn"
manual_ok_or                       = "warn"
map_err_ignore                     = "warn"
map_flatten                        = "warn"
map_unwrap_or                      = "warn"
match_on_vec_items                 = "warn"
match_same_arms                    = "warn"
match_wild_err_arm                 = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget                         = "warn"
missing_enforced_import_renames    = "warn"
mut_mut                            = "warn"
mutex_integer                      = "warn"
needless_borrow                    = "warn"
needless_continue                  = "warn"
needless_for_each                  = "warn"
option_option                      = "warn"
path_buf_push_overwrite            = "warn"
ptr_as_ptr                         = "warn"
rc_mutex                           = "warn"
ref_option_ref                     = "warn"
rest_pat_in_fully_bound_structs    = "warn"
same_functions_in_if_condition     = "warn"
semicolon_if_nothing_returned      = "warn"
single_match_else                  = "warn"
string_add                         = "warn"
string_add_assign                  = "warn"
string_lit_as_bytes                = "warn"
string_to_string                   = "warn"
todo                               = "warn"
trait_duplication_in_bounds        = "warn"
unimplemented                      = "warn"
unnested_or_patterns               = "warn"
unused_self                        = "warn"
useless_transmute                  = "warn"
verbose_file_reads                 = "warn"
zero_sized_map_values              = "warn"
