[workspace]
default-members = ["cgx"]
members         = ["cgx", "cgx-core", "cargo-cgx"]
resolver        = "3"

[workspace.package]
edition      = "2024"
homepage     = "https://github.com/anelson-labs/cgx"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/anelson-labs/cgx"
rust-version = "1.85.1"

[workspace.dependencies]
assert-json-diff   = "2.0.2"
assert_cmd         = { version = "2.0.17", features = ["color-auto"] }
assert_fs          = { version = "1.1.3", features = ["color-auto"] }
assert_matches     = "1.5.0"
backon             = { version = "1.6", default-features = false, features = ["std-blocking-sleep"] }
build-context      = "0.1.3"
cargo_metadata     = "0.20.0"
cgx                = { version = "0.0.8", path = "cgx" }
cgx-core           = { version = "0.0.8", path = "cgx-core" }
chrono             = { version = "0.4.42", features = ["serde"] }
clap               = { version = "4.5.53", features = ["derive", "env", "string", "unicode"] }
ctrlc              = "3.5"
etcetera           = "0.10.0"
figment            = { version = "0.10.19", features = ["toml", "env"] }
flate2             = "1.1.5"
gix                = { version = "0.75", features = ["blocking-http-transport-reqwest", "max-performance-safe", "worktree-mutation"] }
home               = "0.5.11"
humantime-serde    = "1.1.1"
ignore             = "0.4.25"
insta              = { version = "1.45.0", features = ["filters"] }
predicates         = "3.1.3"
rand               = "0.9.2"
reqwest            = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls", "http2", "charset", "gzip", "system-proxy"] }
semver             = { version = "1.0.27", features = ["serde"] }
serde              = { version = "1.0.228", features = ["derive"] }
serde-cyclonedx    = "0.10.0"
serde_json         = "1.0.147"
sha2               = "0.10.9"
shellexpand        = "3.1.1"
snafu              = "0.8.9"
strum              = "0.27.2"
tame-index         = { version = "0.25.0", features = ["sparse"] }
tar                = "0.4.44"
tempfile           = "3.24.0"
tokio              = { version = "1", features = ["rt", "rt-multi-thread"] }
toml               = "0.9.10"
tracing            = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url                = { version = "2.5.7", features = ["serde"] }
uuid               = { version = "1.19.0", features = ["v4"] }
vergen-gix         = { version = "1.0.9", default-features = false }
which              = "8.0.0"
xz2                = "0.1.7"
zip                = "6.0.0"
zstd               = "0.13.3"

# The profile that 'dist' will build with
[profile.dist]
codegen-units = 1
inherits      = "release"
lto           = true


#
# Enable some optional lints that are not on by default but we want to enforce
#
# This is inspired by the Embark Studios list at <https://github.com/EmbarkStudios/rust-ecosystem/blob/main/lints.toml>
# and the cargo-edit project list at <https://github.com/killercup/cargo-edit/blob/master/Cargo.toml>

[workspace.lints.rust]
future_incompatible    = { level = "warn", priority = -1 }
nonstandard_style      = { level = "warn", priority = -1 }
rust_2018_idioms       = { level = "warn", priority = -1 }
unexpected_cfgs        = "warn"
unnameable_types       = "warn"
unreachable_pub        = "warn"
unsafe_code            = "forbid"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes       = "warn"
unused_macro_rules     = "warn"
unused_qualifications  = "warn"

[workspace.lints.clippy]
await_holding_lock                 = "warn"
char_lit_as_u8                     = "warn"
checked_conversions                = "warn"
dbg_macro                          = "warn"
debug_assert_with_mut_call         = "warn"
doc_markdown                       = "warn"
empty_enum                         = "warn"
enum_glob_use                      = "deny"
exit                               = "warn"
expl_impl_clone_on_copy            = "warn"
explicit_deref_methods             = "warn"
explicit_into_iter_loop            = "warn"
fallible_impl_from                 = "warn"
filter_map_next                    = "warn"
flat_map_option                    = "warn"
float_cmp_const                    = "warn"
fn_params_excessive_bools          = "warn"
from_iter_instead_of_collect       = "warn"
if_let_mutex                       = "warn"
implicit_clone                     = "warn"
imprecise_flops                    = "warn"
inefficient_to_string              = "warn"
invalid_upcast_comparisons         = "warn"
large_digit_groups                 = "warn"
large_stack_arrays                 = "warn"
large_types_passed_by_value        = "warn"
let_unit_value                     = "warn"
linkedlist                         = "warn"
lossy_float_literal                = "warn"
macro_use_imports                  = "warn"
manual_ok_or                       = "warn"
map_err_ignore                     = "warn"
map_flatten                        = "warn"
map_unwrap_or                      = "warn"
match_on_vec_items                 = "warn"
match_same_arms                    = "warn"
match_wild_err_arm                 = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget                         = "warn"
missing_enforced_import_renames    = "warn"
mut_mut                            = "warn"
mutex_integer                      = "warn"
needless_borrow                    = "warn"
needless_continue                  = "warn"
needless_for_each                  = "warn"
option_option                      = "warn"
path_buf_push_overwrite            = "warn"
ptr_as_ptr                         = "warn"
rc_mutex                           = "warn"
ref_option_ref                     = "warn"
rest_pat_in_fully_bound_structs    = "warn"
same_functions_in_if_condition     = "warn"
semicolon_if_nothing_returned      = "warn"
single_match_else                  = "warn"
string_add                         = "warn"
string_add_assign                  = "warn"
string_lit_as_bytes                = "warn"
string_to_string                   = "warn"
todo                               = "warn"
trait_duplication_in_bounds        = "warn"
unimplemented                      = "warn"
unnested_or_patterns               = "warn"
unused_self                        = "warn"
useless_transmute                  = "warn"
verbose_file_reads                 = "warn"
zero_sized_map_values              = "warn"
