[package]
authors      = ["Adam Nelson <anelson@apocryph.org>"]
categories   = ["command-line-utilities", "development-tools"]
description  = "Core library for cgx, the Rust equivalent of uvx or npx for running Rust crates quickly and easily"
edition      = "2024"
homepage     = "https://github.com/anelson-labs/cgx"
license      = "MIT OR Apache-2.0"
name         = "cgx-core"
readme       = "README.md"
repository   = "https://github.com/anelson-labs/cgx"
rust-version = "1.85.1"
version      = "0.0.3"

[package.metadata.cargo-machete]
ignored = [
  # This is used in a `#[serde(with = "...")]` attribute, cargo-machete seems unable to detect this
  "humantime-serde",
]

[dependencies]
build-context   = { workspace = true }
cargo_metadata  = { workspace = true }
chrono          = { workspace = true }
clap            = { workspace = true }
etcetera        = { workspace = true }
figment         = { workspace = true }
flate2          = { workspace = true }
gix             = { workspace = true }
home            = { workspace = true }
humantime-serde = { workspace = true }
ignore          = { workspace = true }
reqwest         = { workspace = true }
semver          = { workspace = true }
serde           = { workspace = true }
serde-cyclonedx = { workspace = true }
serde_json      = { workspace = true }
sha2            = { workspace = true }
shellexpand     = { workspace = true }
snafu           = { workspace = true }
tame-index      = { workspace = true }
tar             = { workspace = true }
tempfile        = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
url             = { workspace = true }
uuid            = { workspace = true }
which           = { workspace = true }

[target.'cfg(windows)'.dependencies]
ctrlc = { workspace = true }

[dev-dependencies]
assert-json-diff   = { workspace = true }
assert_matches     = { workspace = true }
insta              = { workspace = true }
rand               = { workspace = true }
toml               = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
