[package]
description = "A crate that has OS specific dependencies"
edition     = "2024"
name        = "os-specific-deps"
version     = "0.1.0"

[dependencies]
serde = "1.0.228"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.11.0"
libc    = "0.2.177"
nix     = "0.30.1"
procfs  = "0.18.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa              = "0.26.1"
metal              = "0.32.0"
objc               = "0.2.7"
security-framework = "3.5.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi  = "0.3.9"
windows = "0.62.2"
winreg  = "0.55.0"
