[package]
description = "A crate that is...thicc.  It has many dependencies, most of them very stale"
edition     = "2024"
name        = "thicc"
version     = "0.1.0"

[dependencies]
axum               = "0.7"
log                = "0.4.28"
opentelemetry      = "=0.30.0"
prometheus         = "=0.13.4"
serde              = "=1.0.195"
serde_yaml         = "0.9.34"
tokio              = "1.47.1"
toml               = "*"
tonic              = "0.14.2"
tracing            = "=0.1.40"
tracing-otel-extra = "0.30.10"
tracing-subscriber = "0.3.20"
